# flappychu

./: CMakeLists.txt  Project1.sln
Debug/: Bird.cpp  Project1.ilk  Source.cpp
Project1/: Bird.cpp  Bird.h  LTexture.cpp  LTexture.h  Project1.vcxproj  Project1.vcxproj.filters  Source.cpp
Project1/Debug/: source.new.obj.enc  source.obj.enc  vc141.idb
Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
